force-app/main/default/objects/Account/fields/HandleAera__c.field-meta.xml
<CustomField>
    <fullName>HandleAera__c</fullName>
    <label>Handle Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HandleAreaGlobalValue</valueSetName>
    </valueSet>
</CustomField>