force-app/main/default/objects/Account/fields/HandlingInfo__c.field-meta.xml
<CustomField>
    <fullName>HandlingInfo__c</fullName>
    <label>Handling Info</label>
    <type>TextArea</type>
</CustomField>