force-app/main/default/objects/Account/fields/Mafaili_External_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Mafaili_External_Folder_ID__c</fullName>
    <label>Mafaili External Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>