force-app/main/default/objects/Account/fields/PlismAccIDPassword__c.field-meta.xml
<CustomField>
    <fullName>PlismAccIDPassword__c</fullName>
    <label>Plism Acc ID/Password</label>
    <type>TextArea</type>
</CustomField>