force-app/main/default/objects/Account/fields/Sendto__c.field-meta.xml
<CustomField>
    <fullName>Sendto__c</fullName>
    <label>Send to</label>
    <type>TextArea</type>
</CustomField>