force-app/main/default/objects/Account/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customs Clearance</fullName>
            </value>
            <value>
                <fullName>Trucking(Drayage)</fullName>
            </value>
            <value>
                <fullName>Trucking(Charter / Console)</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Co-loader</fullName>
            </value>
            <value>
                <fullName>Packing</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Bonded warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>