force-app/main/default/objects/Account/recordTypes/clofor_com_cfs__CustomerB2B.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CustomerB2B</fullName>
    <active>true</active>
    <label>Customer(B2B)</label>
</RecordType>