force-app/main/default/objects/Account/recordTypes/clofor_com_cfs__Others.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Others</fullName>
    <active>true</active>
    <label>Others</label>
</RecordType>