force-app/main/default/objects/Account/recordTypes/clofor_com_cfs__Partner.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Partner</fullName>
    <active>true</active>
    <label>Partner</label>
</RecordType>