force-app/main/default/objects/Account/recordTypes/clofor_com_cfs__VendorSupplier.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__VendorSupplier</fullName>
    <active>true</active>
    <label>Vendor/Supplier</label>
</RecordType>