force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>clofor_com_cfs__EnglishCompanyName__c</columns>
    <columns>Account_Name_JP__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name_JP__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Accounts</label>
</ListView>